--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -1,5 +1,9 @@
 name: Github Docker Image CI
-on: push
+on:
+  push:
+  schedule:
+    - cron: '0 0 * * * ''
+
 jobs:
   chromium:
     runs-on: ubuntu-latest
